feat: add CitationFormattingRule and remove hardcoded citation tokens